Stats Recycler Adapters Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,16 @@
     <string name="app_name">Sangarodhak</string>
 
 
+    <!--String Constants-->
+
+    <!--Fragment Home-->
+    <string name="home_name_state">State</string>
+    <string name="home_name_country">Country</string>
+    <string name="home_total_cases">Total Cases</string>
+    <string name="home_active_cases">Active Cases</string>
+    <string name="home_total_recovered">Recovered</string>
+    <string name="home_total_deaths">Dead</string>
+
     <!--Saved Data in Shared Preferences-->
     <string name="pref_case_data">team.hashbash.sangarodhak.case_data</string>
 
