--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="pref_case_data">team.hashbash.sangarodhak.case_data</string>
     <string name="pref_user_data">team.hashbash.sangarodhak.user_data</string>
 
+    <!--District Data in Shared Preferences-->
+    <string name="pref_case_data_district_name">PREF_DISTRICT_NAME</string>
+    <string name="pref_case_data_district_confirmed">PREF_DISTRICT_CONFIRMED</string>
+
     <!--State Data in Shared Preferences-->
     <string name="pref_case_data_state_name">PREF_STATE_NAME</string>
     <string name="pref_case_data_state_total_cases">PREF_STATE_TOTAL_CASES</string>
